@@ -1,4 +1,4 @@
-GNU tar NEWS - User visible changes. 2022-06-09
+GNU tar NEWS - User visible changes. 2022-06-10
 Please send GNU tar bug reports to <bug-tar@gnu.org>
 
 version 1.34.90 (git)
@@ -27,6 +27,9 @@ version 1.34.90 (git)
 
 ** Fix --atime-preserve=replace to not fail if there was no need to replace,
    either because we did not read the file, or the atime did not change.
+
+** Fix race when creating a parent directory while another process is
+   also doing so.
 
 ** Fix handling of prefix keywords not followed by "." in pax headers.
 
